--- a/Documents/NYU/EB/ebdjango/video/templates/video/videos.html
+++ b/Documents/NYU/EB/ebdjango/video/templates/video/videos.html
@@ -64,8 +64,8 @@ $(document).ready(function(){
 
       <ul>
         <li>To make you clear about what semantic similarity is, at the beginning of each HIT, you will see three pairs of videos for training.  </li>
-        <li>Note that there no individual qualification test session, they are embedded in the test session.{{lol}}  </li>
-        <li>Take your time to do the task. However, a one-minute break after you finish 15 video pairs is recommended. {{lol}} </li>
+        <li>Note that there no individual qualification test session, they are embedded in the test session. </li>
+        <li>Take your time to do the task. However, a one-minute break after you finish 15 video pairs is recommended. </li>
 
         </ul>
       </div>
